Fixed z-index issue where post editor modal was not displaying

--- a/src/components/PostEditorModal/PostEditorModal.scss
+++ b/src/components/PostEditorModal/PostEditorModal.scss
@@ -48,7 +48,7 @@
 
 .post-editor-modal {
   position: fixed;
-  z-index: 100;
+  z-index: 120;
   top: 0;
   left: 0;
   right: 0;
